# getopt_practice

./: CMakeLists.txt  README.md  install.sh  resources_dump.txt
include/: option_handler.h
src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.c  option_handler.c  optionhandler
